fix splash alignment

--- a/css/style2.css
+++ b/css/style2.css
@@ -38,7 +38,7 @@
 }
 
 .orange{
-  color: #F97352;
+  color: #f0c020;
   /*font-size: 2rem*/
 }
 
